feat!: Spring Boot 4.1 / Jackson 3 平台加固 + 脚手架工程化能力
统一落地本轮平台升级、安全默认收紧与脚手架能力，逐项明细见 CHANGELOG「[未发布]」。

⚠️ 破坏性变更
- 租户隔离改 fail-closed：ypbin.tenant.fail-on-missing-tenant 默认 true，无租户上下文即拒绝
  （登录、匿名分享、定时任务等路径需显式 @TenantIgnore 或 TenantContext.executeIgnore）
- 网关默认放行的 actuator 收窄为 health/info 与 API 文档路径
- Feign fallback 不再回传底层异常文案，只返回稳定提示，完整堆栈仅落服务端日志
- Sa-Token 会话序列化切 Jackson 3（sa-token-redis-template + sa-token-jackson3），存量会话失效需重新登录

变更
- Jackson 2 运行时全面移除：缓存序列化改用 Spring Data Redis 4 的 GenericJacksonJsonRedisSerializer
  （Jackson 3），Feign 错误解码与限流响应统一 tools.jackson，json 模块移除 Jackson 2 定制器与相关依赖
- Feign 无条件注入 connect-timeout=5s / read-timeout=10s，resilience4j TimeLimiter 10s→15s
  （确保读取超时先于熔断取消触发，不再留下悬挂连接）
- EnvironmentPostProcessor 迁至 org.springframework.boot（Boot 4.1 起 boot.env 包废弃待移除），
  7 个模块的接口与 META-INF/spring.factories 注册键同步迁移
- 空值注解迁至 JSpecify（Spring Framework 7 废弃 org.springframework.lang.NonNull/Nullable）
- 其余废弃 API 清零：ThreadLocalAccessor#reset → setValue、RestClient.Builder#messageConverters →
  configureMessageConverters、LettuceConnectionFactory#setPassword → RedisStandaloneConfiguration、
  测试改用 JacksonJsonHttpMessageConverter；-Xlint:deprecation 主源码与测试源码零告警

安全
- 网关身份头签名打通：gateway 签发 X-Gateway-Signed，cloud-core 校验 trusted-source-token，
  新增 require-trusted-source（置 true 时未配密钥拒绝启动），签名标记头进入默认透传白名单
- RequestIdUtils：X-Request-Id 校验长度与可见 ASCII，含 CRLF/控制字符/ANSI/超长一律丢弃并重生成
- cloud-loadbalancer 新增 allowed-versions 白名单，未在白名单内的版本头一律忽略
- license 断言路径快查补时钟回拨检测

新增
- 项目生成器 tools/ypbin-init.mjs + 四档预设（api-only / monolith / microservice / worker），
  生成即 mvn test 通过；新增模板路径合法性校验（含点号目录或残留占位符直接失败）
- ypbin-starter-architecture-tests（不发布）：ArchUnit 把编码铁律变为构建失败，含规则有效性自检；
  本轮新增 EnvironmentPostProcessor 注册源码规则 + SpringFactoriesLoader 运行时可见性断言
- ypbin-starter-test：外部实例优先 → Testcontainers 回退 → 条件跳过；配套 -Pit + failsafe 统一 IT 门禁
- 配置参考由构建产物生成（tools/export-config-metadata.mjs：317 项 ypbin.* + 40 项宿主标准配置）
- API 版本管理（ypbin.web.api-version.*）、方法级弹性（Spring Framework 7 原生 @Retryable/@ConcurrencyLimit）